--- a/Index.html
+++ b/Index.html
@@ -1,139 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Jimena Barrantes | Senior Agile Digital Project Manager Portfolio" />
   <title>Jimena Barrantes | Agile PM Portfolio</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background: #f9f9f9;
-      color: #333;
-    }
-
-    header {
-      background: #0f4c81;
-      color: white;
-      padding: 2rem;
-      text-align: center;
-    }
-
-    section {
-      padding: 2rem;
-      max-width: 960px;
-      margin: auto;
-    }
-
-    h2 {
-      color: #0f4c81;
-      border-bottom: 2px solid #ccc;
-      padding-bottom: 0.5rem;
-    }
-
-    ul {
-      padding-left: 1.2rem;
-    }
-
-    .contact {
-      background: #eee;
-      padding: 1rem;
-      text-align: center;
-    }
-
-    .skills-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 1rem;
-    }
-  </style>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-
-<body>
-  <header>
-    <h1>Jimena Barrantes</h1>
-    <p>Sr. Digital Agile Project Manager | Product Owner | Scrum Master</p>
-    <p>📍 Heredia, Costa Rica | 📞 +506 7149 1877 | ✉️ aj.balop@gmail.com</p>
-    <p><a href="https://linkedin.com/in/ajbalop" style="color:white; text-decoration:underline">LinkedIn Profile</a></p>
+<body class="bg-gray-50 text-gray-800 font-sans leading-relaxed">
+  <header class="bg-white shadow-md p-6 text-center">
+    <h1 class="text-3xl font-bold">Jimena Barrantes</h1>
+    <p>Senior Agile Digital Project Manager | Scrum Master | Product Owner</p>
+    <p>Heredia, Costa Rica | +506 7149 1877 | <a href="mailto:aj.balop@gmail.com" class="text-blue-600">aj.balop@gmail.com</a></p>
+    <p><a href="https://linkedin.com/in/ajbalop" class="text-blue-600" target="_blank">LinkedIn: ajbalop</a></p>
   </header>
 
-  <section>
-    <h2>Professional Summary</h2>
-    <p>Experienced Sr. Digital Agile Project Manager, Product Owner, and Scrum Master with 16+ years leading digital transformation across Finance, IT, and Healthcare. Skilled in Agile delivery, stakeholder management, and end-to-end lifecycle execution. Bilingual in English and Spanish with global experience.</p>
-  </section>
+  <main class="max-w-5xl mx-auto p-6">
+    <section class="mb-8">
+      <h2 class="text-2xl font-semibold border-b pb-2">Professional Summary</h2>
+      <p>
+        Senior Agile Digital Project Manager, Scrum Master, and Product Owner with 16+ years of global experience across Finance, Healthcare, and IT. Expert in Agile (Scrum, SAFe, Kanban), Waterfall, Hybrid methodologies, AI-Cloud prompt engineering, and CMS platforms including Liferay, Salesforce CMS, and WordPress. Proven success in enterprise transformations, Agile team coaching, and delivering initiatives that improve delivery by 50%, increase business value by 40%, and boost team engagement. Skilled in stakeholder alignment, risk management, and agile coaching using tools like JIRA, Confluence, Azure DevOps, and ServiceNow.
+      </p>
+    </section>
 
-  <section>
-    <h2>Work Experience</h2>
-    <h3>iTree Training | Senior Agile Project Manager / Agile Coach (2020–2025)</h3>
-    <ul>
-      <li>Drove digital banking projects with global Agile teams.</li>
-      <li>Coached POs; improved stakeholder satisfaction to 100%.</li>
-      <li>Applied Azure DevOps, MIRO, Power BI, and backlog management.</li>
-    </ul>
+    <section class="mb-8">
+      <h2 class="text-2xl font-semibold border-b pb-2">Professional Experience</h2>
+      <div class="mb-4">
+        <h3 class="font-bold text-lg">iTree Training – Senior Project Agile Manager / Agile Coach (Global)</h3>
+        <p class="italic">April 2020 – Present</p>
+        <ul class="list-disc list-inside">
+          <li>Led Coca-Cola’s iRed Global Solution project, impacting over 50% of bottlers in Mexico.</li>
+          <li>Improved delivery output by 50% and team satisfaction by 65%.</li>
+          <li>Drove Salesforce CMS enhancements and multi-country programs for Nissan.</li>
+        </ul>
+      </div>
+      <div class="mb-4">
+        <h3 class="font-bold text-lg">Infinite Computer Solutions – Senior Scrum Master (Healthcare)</h3>
+        <p class="italic">April 2022 – December 2024</p>
+        <ul class="list-disc list-inside">
+          <li>Reduced onboarding/offboarding by 60% via SharePoint automation.</li>
+          <li>Coached Agile teams and supported ART launches.</li>
+        </ul>
+      </div>
+      <div class="mb-4">
+        <h3 class="font-bold text-lg">Coca-Cola LATAM – Business Relationship Analyst / Product Owner</h3>
+        <p class="italic">November 2018 – April 2022 | Brazil</p>
+        <ul class="list-disc list-inside">
+          <li>Rolled out iRed Global Solution; boosted sales by 37% via CMS upgrades.</li>
+          <li>Defined Agile standards in 4 countries; coached 5 POs.</li>
+        </ul>
+      </div>
+      <div class="mb-4">
+        <h3 class="font-bold text-lg">Equifax – Project Manager / Scrum Master</h3>
+        <p class="italic">August 2017 – November 2018</p>
+        <ul class="list-disc list-inside">
+          <li>Launched multilingual Liferay site; boosted engagement by 30%.</li>
+          <li>Implemented Agile metrics and improved velocity by 20%.</li>
+        </ul>
+      </div>
+      <div class="mb-4">
+        <h3 class="font-bold text-lg">GBM (IBM Latin America) – Junior Project Manager</h3>
+        <p class="italic">December 2014 – July 2017</p>
+        <ul class="list-disc list-inside">
+          <li>Delivered 15+ IBM IT-Smart solutions; increased efficiency by 20%.</li>
+        </ul>
+      </div>
+      <div class="mb-4">
+        <h3 class="font-bold text-lg">McKinsey & Company – Data Engineer (Global)</h3>
+        <p class="italic">November 2013 – November 2014</p>
+        <ul class="list-disc list-inside">
+          <li>Enabled 80% increase in win rate through 100% data accuracy.</li>
+        </ul>
+      </div>
+      <div class="mb-4">
+        <h3 class="font-bold text-lg">Hewlett Packard – Incident Manager / Support Engineer</h3>
+        <p class="italic">2006–2008; 2011–2012</p>
+        <ul class="list-disc list-inside">
+          <li>Achieved 95% SLA compliance; improved uptime by 35%.</li>
+        </ul>
+      </div>
+      <div class="mb-4">
+        <h3 class="font-bold text-lg">Bac Credomatic Bank – Regional Support Technician</h3>
+        <p class="italic">December 2008 – March 2011</p>
+        <ul class="list-disc list-inside">
+          <li>Reduced escalations by 25%; maintained 99% system uptime.</li>
+        </ul>
+      </div>
+    </section>
 
-    <h3>Infinite Computer Solutions | Sr. Digital Agile PM (2022–2024)</h3>
-    <ul>
-      <li>Led product initiatives in Healthcare & IT.</li>
-      <li>Automated reporting with Power BI; improved delivery efficiency.</li>
-    </ul>
+    <section class="mb-8">
+      <h2 class="text-2xl font-semibold border-b pb-2">Education</h2>
+      <ul class="list-disc list-inside">
+        <li>MBA, Master Cum Laude – SL Business School, Spain, 2021</li>
+        <li>Master in Project Management – SL Business School, Spain, 2021</li>
+        <li>Bachelor’s in Computer Science – Universidad Hispanoamericana, Costa Rica, 2010</li>
+        <li>Technical HS in Accounting – Colegio Monseñor Sanabria, Costa Rica, 2006</li>
+      </ul>
+    </section>
 
-    <h3>Coca-Cola | Business Relationship Analyst / PO (2019–2022)</h3>
-    <ul>
-      <li>Led LATAM digital initiatives; delivered 100% Agile adoption.</li>
-      <li>Launched iRed platform: +50% adoption in Mexico Unit.</li>
-    </ul>
+    <section class="mb-8">
+      <h2 class="text-2xl font-semibold border-b pb-2">Certifications</h2>
+      <ul class="list-disc list-inside">
+        <li>Project Management Professional (PMP)</li>
+        <li>PMI Agile Certified Practitioner (PMI-ACP)</li>
+        <li>Scrum Master Certified (SMC)</li>
+        <li>Product Owner Certified (SPOC)</li>
+        <li>ITIL v3, Six Sigma Yellow & Black Belt</li>
+        <li>Design Thinking – University of Sydney</li>
+      </ul>
+    </section>
 
-    <h3>Equifax | Scrum Master (2017–2019)</h3>
-    <ul>
-      <li>Managed Liferay CMS upgrades across international portals.</li>
-      <li>Improved team agility and delivery metrics.</li>
-    </ul>
+    <section class="mb-8">
+      <h2 class="text-2xl font-semibold border-b pb-2">Technical Skills</h2>
+      <ul class="list-disc list-inside">
+        <li><strong>Agile & Project Delivery:</strong> Scrum, SAFe, Kanban, PI Planning, Agile Coaching</li>
+        <li><strong>CMS:</strong> Liferay, WordPress, Salesforce CMS, SharePoint</li>
+        <li><strong>Cloud & Tools:</strong> AWS, IBM Cloud, Jira, Confluence, Azure DevOps</li>
+        <li><strong>DevOps:</strong> GitHub, Kubernetes, Unix, Linux, AIX</li>
+        <li><strong>Soft Skills:</strong> Leadership, Coaching, KPI Reporting, Communication</li>
+      </ul>
+    </section>
 
-    <h3>GBM | Jr. Project Manager (2014–2017)</h3>
-    <ul><li>Led IT software rollouts in LATAM with ITIL practices.</li></ul>
+    <section class="mb-8">
+      <h2 class="text-2xl font-semibold border-b pb-2">Languages</h2>
+      <ul class="list-disc list-inside">
+        <li>Spanish: Native</li>
+        <li>English: Bilingual (C2)</li>
+        <li>Portuguese: Conversational</li>
+      </ul>
+    </section>
 
-    <h3>McKinsey & Co. | Data Engineer (2012–2014)</h3>
-    <ul><li>Created dashboards and models to support business strategy.</li></ul>
+    <section>
+      <h2 class="text-2xl font-semibold border-b pb-2">Additional Experience</h2>
+      <ul class="list-disc list-inside">
+        <li>Trainer at LearnQuest and SWAT Consulting</li>
+        <li>Specialized in AI Prompt Engineering, Cybersecurity, HEDIS, SEO, Google Analytics</li>
+      </ul>
+    </section>
+  </main>
 
-    <h3>Hewlett Packard | Incident Manager (2010–2012)</h3>
-    <ul><li>Directed incident resolution and root cause analysis.</li></ul>
-  </section>
-
-  <section>
-    <h2>Education</h2>
-    <ul>
-      <li>Master’s in Project Management (Cum Laude) – Spain</li>
-      <li>Master’s in Business Administration (Cum Laude) – Spain</li>
-      <li>Bachelor’s in Computer Science – Universidad Hispanoamericana</li>
-      <li>Technical High School Degree – Accounting & Internal Audit</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>Certifications</h2>
-    <ul>
-      <li>PMP | PMI-ACP | Scrum Product Owner & Master Certified</li>
-      <li>ITIL v3 | Six Sigma Black & Yellow Belt</li>
-      <li>Design Thinking – University of Sydney</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>Skills & Tools</h2>
-    <div class="skills-grid">
-      <div><strong>Agile/DevOps:</strong> Azure DevOps, Jira, Trello, ADO</div>
-      <div><strong>Data:</strong> Power BI, SQL, Google Analytics, Cognos</div>
-      <div><strong>Design:</strong> MIRO, Figma, Adobe XD, Liferay</div>
-      <div><strong>Cloud:</strong> AWS, Azure, Google Cloud, IBM</div>
-      <div><strong>Project:</strong> PRD, Roadmaps, UAT, Retrospectives</div>
-      <div><strong>Languages:</strong> Spanish (Native), English (C2), Portuguese (Basic)</div>
-    </div>
-  </section>
-
-  <section class="contact">
-    <p>Want to collaborate? <a href="mailto:aj.balop@gmail.com">Let's connect via email</a> or <a href="https://linkedin.com/in/ajbalop">LinkedIn</a>.</p>
-  </section>
+  <footer class="text-center text-sm text-gray-500 py-4">
+    © 2025 Jimena Barrantes. All rights reserved.
+  </footer>
 </body>
 </html>
