--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
     function editSection(sectionId) {
       const password = prompt("Admin password:");
-      if (password !== "your_password_here") {
+      if (password !== "graciasDios@@") {
         alert("Unauthorized access.");
         return;
       }
